# RubiksCubeSolver

./: .gitignore  CMakeLists.txt  RubicsCube.cpp  RubicsCube.hpp  RubicsCubeSolver.hpp  RubiksCube.cpp  RubiksCube.hpp  RubiksCubeSolver.cpp  RubiksCubeSolver.hpp  RublicsCubeSolver.cpp  main.cpp  makefile
include/: Color.hpp  RubiksCube.hpp  Side.hpp  Visualizer.hpp
src/: Color.cpp  RubiksCube.cpp  RubiksCubeSolver.cpp  Side.cpp  Visualizer.cpp  main.cpp
